# TP_c_cpp

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  address.c  address.h  correct_input.txt  main.c  tests.cpp
ci/: install-linux.sh
libs/file_worker/: file_worker.c  file_worker.h  test_file_worker.cpp
libs/parallel/: maxsubseq.c  maxsubseq.h  test_parallel.cpp
libs/simple/: maxsubseq.c  maxsubseq.h  test_simple.cpp
test/: correct_data.txt  incorrect_data.txt  stress_test.txt
